fix(Navbar): paddings and margins on mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   height: var(--navbar-height);
-  padding: 0px 30px;
+  padding: 0px 32px;
   margin-bottom: 32px;
 }
 
@@ -90,4 +90,11 @@
 
 .dcl.navbar-hamburger-wrapper {
   transform: translateY(-4px);
+}
+
+@media (max-width: 768px) {
+  .dcl.navbar {
+    padding: 0px 32px;
+    margin-bottom: 24px;
+  }
 }
